changes images path

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div
         class="container px-md-5 mx-md-5 d-flex align-items-center justify-content-between"
       >
-        <img src="/assets/logo.png" alt="" />
+        <img src="assets/logo.png" alt="" />
 
         <ul
           class="navbar-nav d-none d-md-flex align-items-lg-center gap-4 fs-5"
@@ -63,7 +63,7 @@
 
         <div class="col-12 col-md-6">
           <img
-            src="/assets/banner-image.png"
+            src="assets/banner-image.png"
             alt=""
             class="object-fit-cover w-100 h-100"
           />
@@ -80,7 +80,7 @@
         </p>
         <div class="container mx-auto">
           <img
-            src="/assets/Logo Content.png"
+            src="assets/Logo Content.png"
             alt=""
             class="pt-4 pb-3 w-100 mx-auto object-fit-cover"
           />
@@ -125,7 +125,7 @@
     <!-- how it works section  -->
     <div class="bg-white w-100 d-flex justify-content-between">
       <img
-        src="/assets/Decoration.png"
+        src="assets/Decoration.png"
         alt=""
         class="d-none d-md-block w-25 object-fit-cover"
       />
@@ -136,7 +136,7 @@
         <h3 class="large-text">How it works?</h3>
       </div>
       <img
-        src="/assets/Decoration.png"
+        src="assets/Decoration.png"
         alt=""
         class="d-none d-md-block w-25 object-fit-cover"
       />
@@ -157,7 +157,7 @@
         <div class="col">
           <img
             class="w-100 object-fit-cover"
-            src="/assets/Discover Your Skills Photo.png"
+            src="assets/Discover Your Skills Photo.png"
             alt=""
           />
         </div>
@@ -169,7 +169,7 @@
         <div class="col">
           <img
             class="w-100 object-fit-cover"
-            src="/assets/commertial-awareness.png"
+            src="assets/commertial-awareness.png"
             alt=""
           />
         </div>
@@ -197,7 +197,7 @@
         <div class="col">
           <img
             class="w-100 object-fit-cover"
-            src="/assets/Upskill Yourself Photo Content.png"
+            src="assets/Upskill Yourself Photo Content.png"
             alt=""
           />
         </div>
@@ -209,7 +209,7 @@
         <div class="col">
           <img
             class="w-100 object-fit-cover"
-            src="/assets/Collobarte & Interact Photo content.png"
+            src="assets/Collobarte & Interact Photo content.png"
             alt=""
           />
         </div>
@@ -233,15 +233,15 @@
           </p>
           <div class="d-flex align-items-center gap-3">
             <p class="my-auto">Interested?</p>
-            <img src="/assets/Facebook Like.png" alt="" />
-            <img src="/assets/Facebook unLike.png" alt="" />
+            <img src="assets/Facebook Like.png" alt="" />
+            <img src="assets/Facebook unLike.png" alt="" />
           </div>
         </div>
 
         <div class="col">
           <img
             class="w-100 object-fit-cover m-2"
-            src="/assets/made-cv.png"
+            src="assets/made-cv.png"
             alt=""
           />
         </div>
@@ -251,7 +251,7 @@
         <div class="col">
           <img
             class="w-100 object-fit-cover"
-            src="/assets/Live Job Postings Photo Conent.png"
+            src="assets/Live Job Postings Photo Conent.png"
             alt=""
           />
         </div>
@@ -263,8 +263,8 @@
           </p>
           <div class="d-flex align-items-center gap-3">
             <p class="my-auto">Interested?</p>
-            <img src="/assets/Facebook Like.png" alt="" />
-            <img src="/assets/Facebook unLike.png" alt="" />
+            <img src="assets/Facebook Like.png" alt="" />
+            <img src="assets/Facebook unLike.png" alt="" />
           </div>
         </div>
       </div>
@@ -292,7 +292,7 @@
           class="d-flex flex-column flex-md-row justify-content-center gap-4 gap-md-0 justify-content-md-between pt-5 pt-md-2 pb-5"
         >
           <div class="w-33 p-4 bg-white rounded-5">
-            <img src="/assets/“.png" alt="" />
+            <img src="assets/“.png" alt="" />
             <p class="fs-4 pt-2 pb-4">
               To be able to connect with, and be exposed to other people with
               other skills and different ideas is the starting point of creating
@@ -303,7 +303,7 @@
           </div>
 
           <div class="w-33 mx-md-4 p-4 bg-white rounded-5">
-            <img src="/assets/“.png" alt="" />
+            <img src="assets/“.png" alt="" />
             <p class="fs-4 pt-2 pb-4">
               To be able to connect with, and be exposed to other people with
               other skills and different ideas is the starting point of creating
@@ -314,7 +314,7 @@
           </div>
 
           <div class="w-33 p-4 bg-white rounded-5">
-            <img src="/assets/“.png" alt="" />
+            <img src="assets/“.png" alt="" />
             <p class="fs-4 pt-2 pb-4">
               To be able to connect with, and be exposed to other people with
               other skills and different ideas is the starting point of creating
@@ -327,7 +327,7 @@
       </section>
 
       <img
-        src="/assets/Decoration-2.png"
+        src="assets/Decoration-2.png"
         alt=""
         class="position-absolute bottom-0 img-position"
       />
@@ -338,7 +338,7 @@
       <div class="container mx-auto pt-5 pb-3">
         <div class="row">
           <div class="col-lg-4 col-md-6 mb-4">
-            <img src="/assets/logo.png" alt="" />
+            <img src="assets/logo.png" alt="" />
             <ul class="list-unstyled gy-2 mb-0 pt-3">
               <li>
                 Level39 <br />
